review detail desi

--- a/src/main/resources/static/css/review-detail.css
+++ b/src/main/resources/static/css/review-detail.css
@@ -216,6 +216,7 @@ body {
 }
 
 .review-image-wrapper {
+  --image-aspect-ratio: 1;
   position: relative;
   display: block;
   border-radius: 20px;
